--- a/.github/workflows/prgate.yaml
+++ b/.github/workflows/prgate.yaml
@@ -13,13 +13,11 @@ jobs:
       fail-fast: false
       matrix:
         python:
-          - '3.7'
           - '3.8'
           - '3.9'
-#          - '3.10'
-#          - '3.11'
+          - '3.10'
+          - '3.11'
         etcd:
-          - 'v3.0.17'
           - 'v3.1.20'
           - 'v3.2.32'
           - 'v3.3.10'
@@ -27,6 +25,49 @@ jobs:
           - 'v3.4.22'
           - 'v3.5.6'
     runs-on: ubuntu-latest
+    env:
+      ETCD_VERSION: ${{ matrix.etcd }}
+    services:
+      etcd-1:
+        image: gcr.io/etcd-development/etcd:${{ matrix.etcd }}
+        env:
+          ETCD_NAME: etcd-1
+          ETCD_LISTEN_CLIENT_URLS: http://0.0.0.0:2379
+          ETCD_ADVERTISE_CLIENT_URLS: http://etcd-1:2379
+          ETCD_LISTEN_PEER_URLS: http://0.0.0.0:2380
+          ETCD_INITIAL_ADVERTISE_PEER_URLS: http://etcd-1:2380
+          ETCD_INITIAL_CLUSTER: etcd-1=http://etcd-1:2380,etcd-2=http://etcd-2:2380,etcd-3=http://etcd-3:2380
+          ETCD_INITIAL_CLUSTER_TOKEN: tkn
+          ETCD_INITIAL_CLUSTER_STATE: new
+        ports:
+          - "2379:2379"
+      etcd-2:
+        image: gcr.io/etcd-development/etcd:${{ matrix.etcd }}
+        env:
+          ETCD_NAME: etcd-2
+          ETCD_LISTEN_CLIENT_URLS: http://0.0.0.0:2379
+          ETCD_ADVERTISE_CLIENT_URLS: http://etcd-2:2379
+          ETCD_LISTEN_PEER_URLS: http://0.0.0.0:2380
+          ETCD_INITIAL_ADVERTISE_PEER_URLS: http://etcd-2:2380
+          ETCD_INITIAL_CLUSTER: etcd-1=http://etcd-1:2380,etcd-2=http://etcd-2:2380,etcd-3=http://etcd-3:2380
+          ETCD_INITIAL_CLUSTER_TOKEN: tkn
+          ETCD_INITIAL_CLUSTER_STATE: new
+        ports:
+          - "2380:2379"
+      etcd-3:
+        image: gcr.io/etcd-development/etcd:${{ matrix.etcd }}
+        env:
+          ETCD_NAME: etcd-3
+          ETCD_LISTEN_CLIENT_URLS: http://0.0.0.0:2379
+          ETCD_ADVERTISE_CLIENT_URLS: http://etcd-3:2379
+          ETCD_LISTEN_PEER_URLS: http://0.0.0.0:2380
+          ETCD_INITIAL_ADVERTISE_PEER_URLS: http://etcd-3:2380
+          ETCD_INITIAL_CLUSTER: etcd-1=http://etcd-1:2380,etcd-2=http://etcd-2:2380,etcd-3=http://etcd-3:2380
+          ETCD_INITIAL_CLUSTER_TOKEN: tkn
+          ETCD_INITIAL_CLUSTER_STATE: new
+        ports:
+          - "2381:2379"
+
     steps:
       - name: Checkout
         uses: actions/checkout@v3
@@ -65,5 +106,3 @@ jobs:
 
       - name: Run tests
         run: make test
-        env:
-          TEST_ETCD_VERSION: ${{ matrix.etcd }}
