--- a/pyproject.toml
+++ b/pyproject.toml
@@ -37,20 +37,20 @@ include = [
 'Issue tracker' = 'https://github.com/kragniz/python-etcd3'
 
 [tool.poetry.dependencies]
-python = '>=3.8.1,<3.11'
-grpcio = '<=1.44.0'
-protobuf = '^3.20.3'
-#python = '^3.8.1'  # 3.11 doesn't have wheels for grpc<1.46.0
-#grpcio = '^1.51.1'  # '^1.51.1', grpc > 1.46.0 causes hanging in tests with Python < 3.10 https://github.com/grpc/grpc/issues/30843
-#protobuf = '^4.21.12'  # '^4.21.12' - see grpc dependency
+#python = '>=3.8.1,<3.11'
+#grpcio = '<=1.44.0'
+#protobuf = '^3.20.3'
+python = '^3.8.1'  # 3.11 doesn't have wheels for grpc==1.47.2
+grpcio = '1.46.0'  # '^1.51.1', grpc > 1.47.2 causes hanging in tests with Python < 3.10 https://github.com/grpc/grpc/issues/30843
+protobuf = '^3.20.3'  # '^4.21.12' - see grpc dependency
 
 [tool.poetry.dev-dependencies]
 bump2version = '^1.0.1'
 flake8 = '^6.0.0'
 flake8-docstrings = '^1.6.0'
 flake8-import-order = '^0.18.2'
-grpcio-tools = '1.44.0'
-#grpcio-tools = '^1.51.1'  # '^1.51.1', grpc > 1.46.0 causes hanging in tests with Python < 3.10 https://github.com/grpc/grpc/issues/30843
+#grpcio-tools = '1.44.0'
+grpcio-tools = '1.46.0'  # '^1.51.1', grpc > 1.46.0 causes hanging in tests with Python < 3.10 https://github.com/grpc/grpc/issues/30843
 hypothesis = '^6.61.0'
 mock = '^4.0.3'
 pifpaf = { git = 'https://github.com/jd/pifpaf.git', branch = 'master' }
