--- a/pyproject.toml
+++ b/pyproject.toml
@@ -46,9 +46,12 @@ bump2version = '^1.0.1'
 flake8 = '^6.0.0'
 flake8-docstrings = '^1.6.0'
 flake8-import-order = '^0.18.2'
+grpc-stubs = '^1.24.11'
 grpcio-tools = '^1.51.1'
 hypothesis = '^6.61.0'
 mock = '^4.0.3'
+mypy = '^0.991'
+mypy-protobuf = '^3.2.0'
 pytest = '^7.2.0'
 pytest-cov = '^4.0.0'
 sphinx = '^5.3.0'
@@ -60,6 +63,21 @@ include = ['etcd3/*']
 
 [tool.coverage.report]
 show_missing = true
+
+[tool.mypy]
+check_untyped_defs = true
+disallow_any_unimported = true
+disallow_incomplete_defs = true
+disallow_untyped_decorators = true
+disallow_untyped_defs = true
+show_error_codes = true
+warn_return_any = true
+warn_unused_ignores = true
+
+[[tool.mypy.overrides]]
+module = ['etcd3.etcdrpc.*']
+check_untyped_defs = false
+disallow_untyped_defs = false
 
 [build-system]
 requires = ['poetry-core>=1.0.0']
